# iris

./: .gitgnore  Cargo.toml  README.md  android manifest  app.gian  email .n  email.rs  error.rs  home screen  id.rs  lib.rs  protocall
crates/iris-core/: Cargo.toml
crates/iris-core/src/: config.rs  constants.rs  lib.rs  utils.rs  validation.rs
crates/types/: Cargo.toml
crates/types/src/: account_id.rs  api_key_id.rs  attachment_id.rs  blob_id.rs  calendar_id.rs  contact_id.rs  device_id.rs  domain_id.rs  error.rs  event_id.rs  folder_id.rs  group_id.rs  id.rs  identity_id.rs  job_id.rs  label_id.rs  lib.rs  macros.rs  mailbox_id.rs  message_id.rs  notification_id.rs  permission_id.rs  queue_id.rs  role_id.rs  session_id.rs  tenant_id.rs  thread_id.rs  token_id.rs  upload_id.rs  user_id.rs
crates/types/src/email/: address.rs  attachment.rs  body.rs  envelope.rs  flags.rs  folder.rs  header.rs  label.rs  mailbox.rs  message.rs  message_id.rs  mod.rs  priority.rs  status.rs
