[workspace]
members = [
    "crates/iris-types",
    "crates/iris-core",
    "crates/iris-crypto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Iris Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rd2368351-design/iris"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
