[package]
name = "iris-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
iris-types = { path = "../iris-types" }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.9"
