[package]
name = "iris-types"
version = "0.1.0"
edition = "2021"
authors = ["Iris Team"]
description = "Shared types for the Iris mail platform"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
bitflags = { version = "2.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
